[tool.poetry]
name = "genomeplotter"
version = "0.1.0"
description = "A set of script to create accurate visualisation of the human genome"
authors = ["DSuveges <daniel.suveges@protonmail.com>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.0"
pycairo = "^1.26.1"
numpy = "^2.1.0"
pandas = "^2.2.2"
pybedtools = "^0.10.0"
requests = "^2.32.3"
pyyaml = "^6.0.2"
cairosvg = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
coverage = "^7.6.1"
pre-commit = "^3.8.0"
mypy = "^1.11.2"
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
