[project]
name = "genomeplotter"
version = "0.1.0"
description = "A set of script to create accurate visualisation of the human genome"
authors = [{ name = "DSuveges", email = "daniel.suveges@protonmail.com" }]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pycairo>=1.26.1",
    "numpy>=2.1.0",
    "pandas>=2.2.2",
    "pybedtools>=0.10.0",
    "requests>=2.32.4",
    "pyyaml>=6.0.2",
    "cairosvg>=2.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "coverage>=7.6.1",
    "pre-commit>=3.8.0",
    "mypy>=1.11.2",
    "ruff>=0.6.3",
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["functions", "input_parsers"]
